--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Enhanced security with proper dashboard routing
+# nginx/nginx.conf - Dynamic routing without .html extensions
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -25,8 +25,8 @@ http {
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
     
     # Shared memory zones
-    lua_shared_dict guest_sessions 10m;     # For guest sessions
-    lua_shared_dict sse_sessions 5m;        # For SSE sessions (max 5)
+    lua_shared_dict guest_sessions 10m;
+    lua_shared_dict sse_sessions 5m;
 
     server {
         listen 80;
@@ -111,7 +111,7 @@ http {
             }
         }
 
-        # ADMIN API - is_who determines if admin
+        # ADMIN API - Admin access required
         location ~ ^/api/admin/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
@@ -131,7 +131,7 @@ http {
             }
         }
 
-        # CHAT API - Enhanced security with explicit pending user block
+        # CHAT API - Approved users and guests
         location ~ ^/api/chat/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -152,20 +152,18 @@ http {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
                 
-                -- PENDING USER BLOCK - Check if authenticated but not approved
+                -- Block pending users from chat API
                 if user_type ~= "none" and user_type ~= "guest" and ngx.var.is_approved ~= "true" then
                     ngx.status = 403
                     ngx.header.content_type = 'application/json'
-                    ngx.say('{"error": "Account pending approval - chat access denied", "is_approved": false, "redirect": "/pending_dash.html"}')
+                    ngx.say('{"error": "Account pending approval - chat access denied", "is_approved": false, "redirect": "/pending"}')
                     ngx.exit(403)
                 end
                 
                 if ngx.var.is_approved == "true" then
-                    -- Admin/approved users use Redis storage
                     local is_approved = require "is_approved"
                     is_approved.handle_chat_api()
                 elseif user_type == "guest" then
-                    -- Guest users use localStorage
                     local is_guest = require "is_guest"
                     is_guest.handle_guest_api()
                 else
@@ -177,10 +175,8 @@ http {
             }
             
             log_by_lua_block {
-                -- Clean up SSE session when connection ends
                 local server = require "server"
                 local session_id = ngx.var.sse_session_id
-                
                 if session_id and session_id ~= "" then
                     server.end_sse_session(session_id)
                 end
@@ -207,21 +203,27 @@ http {
             }
         }
 
-        # PUBLIC PAGES - No auth required
+        # =====================================
+        # DYNAMIC ROUTES (NO .html EXTENSIONS)
+        # =====================================
+
+        # HOME PAGE - Always public
         location = / {
             try_files /index.html =404;
         }
 
-        location = /login.html {
+        # LOGIN PAGE - Public
+        location = /login {
             try_files /login.html =404;
         }
 
-        location = /register.html {
+        # REGISTER PAGE - Public  
+        location = /register {
             try_files /register.html =404;
         }
 
-        # CHAT PAGE - Enhanced routing with is_approved check
-        location = /chat.html {
+        # CHAT PAGE - Dynamic based on user type
+        location = /chat {
             content_by_lua_block {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
@@ -235,8 +237,8 @@ http {
                     local is_guest = require "is_guest"
                     is_guest.handle_guest_chat_page()
                 elseif user_type ~= "none" and ngx.var.is_approved ~= "true" then
-                    -- Authenticated but not approved = pending user
-                    return ngx.redirect("/pending_dash.html")
+                    -- Authenticated but not approved = redirect to pending
+                    return ngx.redirect("/pending")
                 else
                     -- No session - show guest options
                     local is_guest = require "is_guest"
@@ -246,66 +248,47 @@ http {
         }
 
         # ADMIN DASHBOARD - Admin only
-        location = /admin_dash.html {
+        location = /admin {
             content_by_lua_block {
                 local is_admin = require "is_admin"
                 is_admin.handle_admin_page()
             }
         }
 
-        # LEGACY ADMIN PAGE - Redirect to new dashboard
-        location = /admin.html {
-            content_by_lua_block {
-                return ngx.redirect("/admin_dash.html")
-            }
-        }
-
-        # USER DASHBOARD - Approved users only (is_approved = true)
-        location = /user_dash.html {
+        # USER DASHBOARD - Approved users only
+        location = /dashboard {
             content_by_lua_block {
                 local is_who = require "is_who"
                 local user_type, username = is_who.set_vars()
                 
-                -- Security check: Only approved users can access
-                if ngx.var.is_approved ~= "true" then
-                    if ngx.var.is_admin == "true" then
-                        return ngx.redirect("/admin_dash.html")
-                    elseif user_type ~= "none" and user_type ~= "guest" then
-                        -- Authenticated but not approved = pending
-                        return ngx.redirect("/pending_dash.html")
-                    else
-                        return ngx.redirect("/")
-                    end
-                end
-                
-                local is_approved = require "is_approved"
-                is_approved.handle_dashboard_page()
-            }
-        }
-
-        # LEGACY DASHBOARD PAGE - Redirect to new dashboard
-        location = /dashboard.html {
-            content_by_lua_block {
-                return ngx.redirect("/user_dash.html")
-            }
-        }
-
-        # PENDING DASHBOARD - Authenticated but not approved users only
-        location = /pending_dash.html {
-            content_by_lua_block {
-                local is_who = require "is_who"
-                local user_type, username = is_who.set_vars()
-                
-                -- Security check: Only pending users (authenticated but not approved) can access
-                if user_type == "none" or user_type == "guest" then
-                    return ngx.redirect("/")
-                elseif ngx.var.is_admin == "true" then
-                    return ngx.redirect("/admin_dash.html")
+                if ngx.var.is_admin == "true" then
+                    return ngx.redirect("/admin")
                 elseif ngx.var.is_approved == "true" then
-                    return ngx.redirect("/user_dash.html")
+                    local is_approved = require "is_approved"
+                    is_approved.handle_dashboard_page()
+                elseif user_type ~= "none" and user_type ~= "guest" then
+                    return ngx.redirect("/pending")
+                else
+                    return ngx.redirect("/login")
+                end
+            }
+        }
+
+        # PENDING DASHBOARD - Authenticated but not approved users
+        location = /pending {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                local user_type, username = is_who.set_vars()
+                
+                if user_type == "none" or user_type == "guest" then
+                    return ngx.redirect("/login")
+                elseif ngx.var.is_admin == "true" then
+                    return ngx.redirect("/admin")
+                elseif ngx.var.is_approved == "true" then
+                    return ngx.redirect("/dashboard")
                 end
                 
-                -- At this point: authenticated but not approved = pending user
+                -- Authenticated but not approved = pending user
                 local nav_html = string.format([[
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
@@ -327,17 +310,21 @@ http {
             }
         }
 
-        # LEGACY PENDING PAGE - Redirect to new dashboard
-        location = /pending.html {
-            content_by_lua_block {
-                return ngx.redirect("/pending_dash.html")
-            }
+        # ERROR PAGES - Serve HTML pages, not JSON
+        error_page 404 @custom_404;
+        error_page 500 502 503 504 @custom_50x;
+        
+        location @custom_404 {
+            internal;
+            try_files /404.html =404;
+        }
+        
+        location @custom_50x {
+            internal;
+            try_files /50x.html =500;
         }
 
-        # Error pages
-        error_page 404 /404.html;
-        error_page 500 502 503 504 /50x.html;
-        
+        # Explicit 404.html and 50x.html locations for direct access
         location = /404.html {
             internal;
         }
@@ -346,12 +333,19 @@ http {
             internal;
         }
 
-        # Catch-all
+        # CATCH-ALL for unknown routes - Serve 404 page instead of JSON
         location / {
             content_by_lua_block {
+                -- Set proper content type for HTML
+                ngx.header.content_type = "text/html"
                 ngx.status = 404
-                ngx.header.content_type = "application/json"
-                ngx.say('{"error": "Not found"}')
+                
+                -- Try to serve 404.html
+                local file = io.open("/usr/local/openresty/nginx/html/404.html", "r")
+                if file then
+                    local content = file:read("*a")
+                    file:close()
+                    ngx.say(content)
             }
         }
     }
