spoofing the ui but no data access

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Dynamic routing without .html extensions
+# nginx/nginx.conf - Fixed to work with updated Lua files
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -289,21 +289,17 @@ http {
                 end
                 
                 -- Authenticated but not approved = pending user
-                local nav_html = string.format([[
-<nav class="navbar navbar-expand-lg navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-        <div class="navbar-nav ms-auto">
-            <span class="navbar-text me-3">%s (Pending Approval)</span>
-            <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="bi bi-box-arrow-right"></i> Logout</button>
-        </div>
-    </div>
-</nav>
+                -- Use nav.html template system
+                local nav_links = ''
+                local nav_user = string.format([[
+<span class="navbar-text me-3">%s (Pending Approval)</span>
+<button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="bi bi-box-arrow-right"></i> Logout</button>
 ]], username)
 
                 local template = require "template"
                 template.render_template("/usr/local/openresty/nginx/html/pending_dash.html", {
-                    navigation = nav_html,
+                    nav_links = nav_links,
+                    nav_user = nav_user,
                     username = username,
                     is_approved = "false"
                 })
@@ -333,7 +329,7 @@ http {
             internal;
         }
 
-        # CATCH-ALL for unknown routes - Serve 404 page instead of JSON
+        # CATCH-ALL for unknown routes - Serve 404 HTML page instead of JSON
         location / {
             content_by_lua_block {
                 -- Set proper content type for HTML
@@ -346,6 +342,7 @@ http {
                     local content = file:read("*a")
                     file:close()
                     ngx.say(content)
+                end
             }
         }
     }
