--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ ADMIN_USER_ID=admin
 # =============================================================================
 # 🤖 MODEL CONFIGURATION
 # =============================================================================
+OLLAMA_VERSION=0.9.6
 OLLAMA_MODEL=devstral:24b
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
