--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./ollama
       dockerfile: Dockerfile
+      args:
+        - OLLAMA_VERSION=${OLLAMA_VERSION}
     container_name: devstral-ollama
     privileged: true
     restart: unless-stopped
